updated styles to fix header issue with it being at a low z-index and change background color of the body to avoid clash with the scrolling header

--- a/src/app/components/layout/header/header.component.scss
+++ b/src/app/components/layout/header/header.component.scss
@@ -6,6 +6,7 @@ header {
     padding: 10px;
     background: #fff;
     border-bottom: 1px solid rgb(235, 235, 235);
+    z-index: 9999999999999;
 
     .logo-block {
         display: flex;
