--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,7 @@ html {
 }
 body { 
   // min-width: fit-content;
+    background-color: #ececec;
     margin: 0; 
     font-family: var(--font-body-family);
     // display: grid;
